ssql/parser/gen/ssql_parser.go
// Code generated from gen/SSQL.g4 by ANTLR 4.8. DO NOT EDIT.

package gen // SSQL
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", "'{&'", "'AVG'", "'MAX'",
	"'MIN'", "'SUM'", "'COUNT'", "'PCTL'", "'PART'", "'EQ'", "'NEQ'", "'IN'",
	"'LT'", "'LE'", "'GE'", "'GT'", "'BETWEEN'", "'CONTAIN'", "'EXIST'", "'TIMEFRAME'",
	"'KEY'", "'FIND'", "'WHERE'", "'ORDER-BY'", "'GROUP-BY'", "'LIMIT'", "'ASC'",
	"'DESC'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "AVG", "MAX", "MIN", "SUM", "COUNT",
	"PERCENTILE", "PARTITION", "EQ", "NEQ", "IN", "LT", "LE", "GE", "GT", "BETWEEN",
	"CONTAIN", "EXIST", "TIMEFRAME", "KEY", "FIND", "WHERE", "ORDER_BY", "GROUP_BY",
	"LIMIT", "ASC", "DESC", "NAME", "PATH", "STRING", "INTEGER", "REAL_NUMBER",
	"IDENTIFIER", "WS",
}

var ruleNames = []string{
	"start", "selection", "attribute", "aggregate", "percentile", "groupBy",
	"partition", "expression", "tuple", "vector", "or", "and", "predicate",
	"eq", "neq", "gt", "ge", "lt", "le", "in", "between", "contain", "exist",
	"timeframe", "key", "scalar", "list", "stringList", "doubleList", "intList",
	"orderBy", "order", "limit",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SSQLParser struct {
	*antlr.BaseParser
}

func NewSSQLParser(input antlr.TokenStream) *SSQLParser {
	this := new(SSQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SSQL.g4"

	return this
}

// SSQLParser tokens.
const (
	SSQLParserEOF         = antlr.TokenEOF
	SSQLParserT__0        = 1
	SSQLParserT__1        = 2
	SSQLParserT__2        = 3
	SSQLParserT__3        = 4
	SSQLParserT__4        = 5
	SSQLParserT__5        = 6
	SSQLParserT__6        = 7
	SSQLParserT__7        = 8
	SSQLParserAVG         = 9
	SSQLParserMAX         = 10
	SSQLParserMIN         = 11
	SSQLParserSUM         = 12
	SSQLParserCOUNT       = 13
	SSQLParserPERCENTILE  = 14
	SSQLParserPARTITION   = 15
	SSQLParserEQ          = 16
	SSQLParserNEQ         = 17
	SSQLParserIN          = 18
	SSQLParserLT          = 19
	SSQLParserLE          = 20
	SSQLParserGE          = 21
	SSQLParserGT          = 22
	SSQLParserBETWEEN     = 23
	SSQLParserCONTAIN     = 24
	SSQLParserEXIST       = 25
	SSQLParserTIMEFRAME   = 26
	SSQLParserKEY         = 27
	SSQLParserFIND        = 28
	SSQLParserWHERE       = 29
	SSQLParserORDER_BY    = 30
	SSQLParserGROUP_BY    = 31
	SSQLParserLIMIT       = 32
	SSQLParserASC         = 33
	SSQLParserDESC        = 34
	SSQLParserNAME        = 35
	SSQLParserPATH        = 36
	SSQLParserSTRING      = 37
	SSQLParserINTEGER     = 38
	SSQLParserREAL_NUMBER = 39
	SSQLParserIDENTIFIER  = 40
	SSQLParserWS          = 41
)

// SSQLParser rules.
const (
	SSQLParserRULE_start      = 0
	SSQLParserRULE_selection  = 1
	SSQLParserRULE_attribute  = 2
	SSQLParserRULE_aggregate  = 3
	SSQLParserRULE_percentile = 4
	SSQLParserRULE_groupBy    = 5
	SSQLParserRULE_partition  = 6
	SSQLParserRULE_expression = 7
	SSQLParserRULE_tuple      = 8
	SSQLParserRULE_vector     = 9
	SSQLParserRULE_or         = 10
	SSQLParserRULE_and        = 11
	SSQLParserRULE_predicate  = 12
	SSQLParserRULE_eq         = 13
	SSQLParserRULE_neq        = 14
	SSQLParserRULE_gt         = 15
	SSQLParserRULE_ge         = 16
	SSQLParserRULE_lt         = 17
	SSQLParserRULE_le         = 18
	SSQLParserRULE_in         = 19
	SSQLParserRULE_between    = 20
	SSQLParserRULE_contain    = 21
	SSQLParserRULE_exist      = 22
	SSQLParserRULE_timeframe  = 23
	SSQLParserRULE_key        = 24
	SSQLParserRULE_scalar     = 25
	SSQLParserRULE_list       = 26
	SSQLParserRULE_stringList = 27
	SSQLParserRULE_doubleList = 28
	SSQLParserRULE_intList    = 29
	SSQLParserRULE_orderBy    = 30
	SSQLParserRULE_order      = 31
	SSQLParserRULE_limit      = 32
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) FIND() antlr.TerminalNode {
	return s.GetToken(SSQLParserFIND, 0)
}

func (s *StartContext) Selection() ISelectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectionContext)
}

func (s *StartContext) WHERE() antlr.TerminalNode {
	return s.GetToken(SSQLParserWHERE, 0)
}

func (s *StartContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(SSQLParserEOF, 0)
}

func (s *StartContext) OrderBy() IOrderByContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOrderByContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOrderByContext)
}

func (s *StartContext) Limit() ILimitContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILimitContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILimitContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitStart(s)
	}
}

func (s *StartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SSQLParserRULE_start)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Match(SSQLParserFIND)
	}
	{
		p.SetState(67)
		p.Selection()
	}
	{
		p.SetState(68)
		p.Match(SSQLParserWHERE)
	}
	{
		p.SetState(69)
		p.Expression()
	}
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SSQLParserORDER_BY {
		{
			p.SetState(70)
			p.OrderBy()
		}

	}
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SSQLParserLIMIT {
		{
			p.SetState(73)
			p.Limit()
		}

	}
	{
		p.SetState(76)
		p.Match(SSQLParserEOF)
	}

	return localctx
}

// ISelectionContext is an interface to support dynamic dispatch.
type ISelectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectionContext differentiates from other interfaces.
	IsSelectionContext()
}

type SelectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectionContext() *SelectionContext {
	var p = new(SelectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_selection
	return p
}

func (*SelectionContext) IsSelectionContext() {}

func NewSelectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectionContext {
	var p = new(SelectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_selection

	return p
}

func (s *SelectionContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectionContext) AllAttribute() []IAttributeContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAttributeContext)(nil)).Elem())
	var tst = make([]IAttributeContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAttributeContext)
		}
	}

	return tst
}

func (s *SelectionContext) Attribute(i int) IAttributeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttributeContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAttributeContext)
}

func (s *SelectionContext) GROUP_BY() antlr.TerminalNode {
	return s.GetToken(SSQLParserGROUP_BY, 0)
}

func (s *SelectionContext) AllGroupBy() []IGroupByContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IGroupByContext)(nil)).Elem())
	var tst = make([]IGroupByContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IGroupByContext)
		}
	}

	return tst
}

func (s *SelectionContext) GroupBy(i int) IGroupByContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IGroupByContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IGroupByContext)
}

func (s *SelectionContext) AllAggregate() []IAggregateContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAggregateContext)(nil)).Elem())
	var tst = make([]IAggregateContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAggregateContext)
		}
	}

	return tst
}

func (s *SelectionContext) Aggregate(i int) IAggregateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAggregateContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAggregateContext)
}

func (s *SelectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterSelection(s)
	}
}

func (s *SelectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitSelection(s)
	}
}

func (s *SelectionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitSelection(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Selection() (localctx ISelectionContext) {
	localctx = NewSelectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SSQLParserRULE_selection)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(104)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SSQLParserAVG, SSQLParserMAX, SSQLParserMIN, SSQLParserSUM, SSQLParserCOUNT, SSQLParserPERCENTILE, SSQLParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(78)
			p.Attribute()
		}
		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SSQLParserT__0 {
			{
				p.SetState(79)
				p.Match(SSQLParserT__0)
			}
			{
				p.SetState(80)
				p.Attribute()
			}

			p.SetState(85)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	case SSQLParserGROUP_BY:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(86)
			p.Match(SSQLParserGROUP_BY)
		}
		{
			p.SetState(87)
			p.Match(SSQLParserT__1)
		}
		{
			p.SetState(88)
			p.GroupBy()
		}
		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SSQLParserT__0 {
			{
				p.SetState(89)
				p.Match(SSQLParserT__0)
			}
			{
				p.SetState(90)
				p.GroupBy()
			}

			p.SetState(95)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(96)
			p.Match(SSQLParserT__2)
		}
		p.SetState(101)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SSQLParserT__0 {
			{
				p.SetState(97)
				p.Match(SSQLParserT__0)
			}
			{
				p.SetState(98)
				p.Aggregate()
			}

			p.SetState(103)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAttributeContext is an interface to support dynamic dispatch.
type IAttributeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAttributeContext differentiates from other interfaces.
	IsAttributeContext()
}

type AttributeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttributeContext() *AttributeContext {
	var p = new(AttributeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_attribute
	return p
}

func (*AttributeContext) IsAttributeContext() {}

func NewAttributeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AttributeContext {
	var p = new(AttributeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_attribute

	return p
}

func (s *AttributeContext) GetParser() antlr.Parser { return s.parser }

func (s *AttributeContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SSQLParserIDENTIFIER, 0)
}

func (s *AttributeContext) Aggregate() IAggregateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAggregateContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAggregateContext)
}

func (s *AttributeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AttributeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AttributeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterAttribute(s)
	}
}

func (s *AttributeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitAttribute(s)
	}
}

func (s *AttributeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitAttribute(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Attribute() (localctx IAttributeContext) {
	localctx = NewAttributeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SSQLParserRULE_attribute)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(108)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SSQLParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(106)
			p.Match(SSQLParserIDENTIFIER)
		}

	case SSQLParserAVG, SSQLParserMAX, SSQLParserMIN, SSQLParserSUM, SSQLParserCOUNT, SSQLParserPERCENTILE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(107)
			p.Aggregate()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAggregateContext is an interface to support dynamic dispatch.
type IAggregateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAggregateContext differentiates from other interfaces.
	IsAggregateContext()
}

type AggregateContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAggregateContext() *AggregateContext {
	var p = new(AggregateContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_aggregate
	return p
}

func (*AggregateContext) IsAggregateContext() {}

func NewAggregateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AggregateContext {
	var p = new(AggregateContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_aggregate

	return p
}

func (s *AggregateContext) GetParser() antlr.Parser { return s.parser }

func (s *AggregateContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SSQLParserIDENTIFIER, 0)
}

func (s *AggregateContext) AVG() antlr.TerminalNode {
	return s.GetToken(SSQLParserAVG, 0)
}

func (s *AggregateContext) MAX() antlr.TerminalNode {
	return s.GetToken(SSQLParserMAX, 0)
}

func (s *AggregateContext) MIN() antlr.TerminalNode {
	return s.GetToken(SSQLParserMIN, 0)
}

func (s *AggregateContext) SUM() antlr.TerminalNode {
	return s.GetToken(SSQLParserSUM, 0)
}

func (s *AggregateContext) COUNT() antlr.TerminalNode {
	return s.GetToken(SSQLParserCOUNT, 0)
}

func (s *AggregateContext) Percentile() IPercentileContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPercentileContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPercentileContext)
}

func (s *AggregateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AggregateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AggregateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterAggregate(s)
	}
}

func (s *AggregateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitAggregate(s)
	}
}

func (s *AggregateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitAggregate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Aggregate() (localctx IAggregateContext) {
	localctx = NewAggregateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SSQLParserRULE_aggregate)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(115)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SSQLParserAVG, SSQLParserMAX, SSQLParserMIN, SSQLParserSUM, SSQLParserCOUNT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(110)
			_la = p.GetTokenStream().LA(1)

			if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SSQLParserAVG)|(1<<SSQLParserMAX)|(1<<SSQLParserMIN)|(1<<SSQLParserSUM)|(1<<SSQLParserCOUNT))) != 0) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(111)
			p.Match(SSQLParserT__1)
		}
		{
			p.SetState(112)
			p.Match(SSQLParserIDENTIFIER)
		}
		{
			p.SetState(113)
			p.Match(SSQLParserT__2)
		}

	case SSQLParserPERCENTILE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(114)
			p.Percentile()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IPercentileContext is an interface to support dynamic dispatch.
type IPercentileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPercentileContext differentiates from other interfaces.
	IsPercentileContext()
}

type PercentileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPercentileContext() *PercentileContext {
	var p = new(PercentileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_percentile
	return p
}

func (*PercentileContext) IsPercentileContext() {}

func NewPercentileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PercentileContext {
	var p = new(PercentileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_percentile

	return p
}

func (s *PercentileContext) GetParser() antlr.Parser { return s.parser }

func (s *PercentileContext) PERCENTILE() antlr.TerminalNode {
	return s.GetToken(SSQLParserPERCENTILE, 0)
}

func (s *PercentileContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SSQLParserIDENTIFIER, 0)
}

func (s *PercentileContext) REAL_NUMBER() antlr.TerminalNode {
	return s.GetToken(SSQLParserREAL_NUMBER, 0)
}

func (s *PercentileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PercentileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PercentileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterPercentile(s)
	}
}

func (s *PercentileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitPercentile(s)
	}
}

func (s *PercentileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitPercentile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Percentile() (localctx IPercentileContext) {
	localctx = NewPercentileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SSQLParserRULE_percentile)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(117)
		p.Match(SSQLParserPERCENTILE)
	}
	{
		p.SetState(118)
		p.Match(SSQLParserT__1)
	}
	{
		p.SetState(119)
		p.Match(SSQLParserIDENTIFIER)
	}
	{
		p.SetState(120)
		p.Match(SSQLParserT__0)
	}
	{
		p.SetState(121)
		p.Match(SSQLParserREAL_NUMBER)
	}
	{
		p.SetState(122)
		p.Match(SSQLParserT__2)
	}

	return localctx
}

// IGroupByContext is an interface to support dynamic dispatch.
type IGroupByContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGroupByContext differentiates from other interfaces.
	IsGroupByContext()
}

type GroupByContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGroupByContext() *GroupByContext {
	var p = new(GroupByContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_groupBy
	return p
}

func (*GroupByContext) IsGroupByContext() {}
